--- a/public/index.html
+++ b/public/index.html
@@ -47,8 +47,9 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
   <script src="https://unpkg.com/vue-chartjs/dist/vue-chartjs.min.js"></script>
-
+  <script async src='https://www.tiktok.com/embed.js'></script>
   <title>cognizata</title>
+
 </head>
 
 <body>
