--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
   <script src="https://unpkg.com/v-tooltip"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.min.js"></script>
   <script src="https://unpkg.com/vue-html-to-paper/build/vue-html-to-paper.js"></script>
+  <!-- <script type="text/javascript" src="https://api.longdo.com/map/?key=ee3f741c3f4b32e012e0948d5c3e8c7e"></script> -->
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
   <script src="https://unpkg.com/vue-chartjs/dist/vue-chartjs.min.js"></script>
